--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <form name="contact" class="my-form" id="contact" netlify netlify-honeypot="bot-field" hidden>
       <select name="interest">
         <option selected disabled>Please choose an option:</option>
-        <option>Request Quote</option>
-        <option>Question about services</option>
-        <option>Other</option>
+        <option value="Request Quote">Request Quote</option>
+        <option value="Question">Question about services</option>
+        <option value="Other">Other</option>
       </select>
       <select name="service">
         <option selected disabled>Selects Services:</option>
